# Templater

./: AuxView.py  Init.py  InitGui.py  README.md  SvgToolkit.py  TemplateTemplateMultiCmd.py  TemplaterAuxViewCmd.py  TemplaterTemplateMultiCmd.py  TemplaterTemplateWikiCmd.py  TemplaterToleranceFrameCmd.py  TitleBlock_KG.py  package.xml
Resources/translations/: Templater.ts  Templater_de.qm
